# nanocode

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  NANOCODE.md  README.md  pyproject.toml
docs/: 01-agent-loop.md  02-tools.md  03-permissions.md  04-context-compaction.md  05-memory.md  06-skills-and-subagents.md  07-mcp.md  08-trace.md  09-runtime-platform-codex-pi.md  10-trajectory-observability-agentic-rl.md  11-command-layer-refactor.md  12-embeddable-agent-layered-refactor.md  13-pi-session-tree-migration.md  15-IMPL-roadmap.md  15-agent-core-context-runtime-multiagent-refactor.md  16-pi-alignment-aggressive-convergence.md  17-tui-client-refactor.md  19-sandbox-manager-native-vm-refactor.md  20-subagent-run-record-isolation-refactor.md  22-evolvemem-integration.md  23-runtime-thread-agent-boundary-cutover.md  24-tool-registry-capability-boundary.md  25-subagent-orchestration-landing.md  26-subagent-multiagent-reverse-calibration.md  cli-context-compaction-comparison.md
examples/: mcp_echo_server.py
src/nanocode/: __init__.py  __main__.py  frontmatter.py  paths.py  prompt.py  system_prompt.md  trust.py  ui.py
tests/: _helpers.py  conftest.py  test_frontmatter.py  test_prompt.py  test_trust.py  test_verbosity.py
tests/agent/: test_agent_chain_parallel.py  test_agent_result_envelope.py  test_agent_session.py  test_agent_wire_artifacts.py  test_background_orchestration.py  test_background_shell.py  test_background_subagent.py  test_bare_loop_purity.py  test_capture_at_emit.py  test_compaction.py  test_compaction_policy.py  test_hooks.py  (+48 more)
(+446 files in other folders)
